--- a/src/blocks/modules/main__content/section/about/about.html
+++ b/src/blocks/modules/main__content/section/about/about.html
@@ -1,125 +1,130 @@
-<section class="about">
-    <div class="about__left">
-        <div class="about__left_text">
-            <p class="about__left_top">Промышленность города была полностью переведена на военные рельсы в
-                сравнительно
-                короткий срок: в течение
-                года, т.е. к середине 1942 года в Рыбинске некоторые предприятия перешли на выпуск военной продукции
-                в
-                течение 3-5 месяцев. В их числе завод дорожных машин, завод полиграфмашин и др. За короткий срок
-                промышленность области освоила 125 видов оборонной продукции.</p>
-            <p>Рыбинскому заводу полиграфических машин был присвоен №808. С первых дней войны завод полиграфических
-                машин получил заказ Народного Комиссариата оборонного машиностроения на выпуск крупнокалиберных
-                минометов и мин. Значение этого оружия ближнего боя сильной с огневой мощью было очень велико.
-                Осенью
-                1941 года Рыбинский завод был единственным предприятием по выпуску такого вооружения.
-            <p>Несмотря на нехватку металла, топлива, материала, инструментов и людей, в конце концов, изыскивая
-                местные ресурсы и благодаря небывалому патриотическому подъему и самоотдаче всех членов коллектива,
-                от
-                рабочего до директора, уже в декабре 1941 года завод увеличил выпуск продукции в несколько раз и
-                получил
-                несколько миллионов рублей прибыли сверх плана.</p>
-            <p>
-                За четыре года войны завод полиграфических машин выпустил 35 000 минометов (10% от общего количества
-                по
-                стране) при плане 25 925 шт. Минометами предприятия было вооружено до 20 дивизий, принимавших
-                активное
-                участие в разгроме немецко-фашистских войск под Москвой. За успешное выполнение заданий ГКО по
-                производству вооружения Указом Президиума Верховного Совета СССР от 16 апреля 1942 года Рыбинский
-                завод
-                полиграфических машин был награжден орденом Трудового Красного знамени и переходящим Красным
-                Знаменем
-                Центрального Комитета партии. Всего за войну предприятие освоило 8 наименований вооружения, среди
-                них
-                миномет 82-мм (на фронт отправлено 3060 вагонов с минометами), корпус авиабомб АО-10, АО-25, мин –
-                МО120
-                (на фронт отправлено 1350 вагонов). С конца 1944 года было освоено производство мин еще большого
-                калибра
-                (160-мм), сыгравших важную роль в разгроме немецко-фашистских войск на территории Германии.
-            </p>
-            <p>
-                В 1943 году, наряду с военной продукцией, завод выполнял задание по выпуску малых печатных машин и
-                универсальных фрезерных станков. На станкостроительной выставке в Москве в 1944 году Рыбинский завод
-                №808 награжден дипломом (за фрейзерные станки). В 1944 году было возобновлено производство различных
-                полиграфических машин, часть которых отправлялась в освобожденные районы страны и использовалась для
-                выпуска листовок, брошюр, газет. Также на заводе выпускали автоматы для спичечной промышленности. С
-                1945
-                года завод оснащает восстановленные после победы типографии страны газетными и книжными ротационными
-                машинами. Указом Президиума Верховного Совета СССР от 16 сентября 1945 года за успешное выполнение
-                заданий по производству минометного вооружения и крупнокалиберных боеприпасов завод был награжден
-                орденом Ленина.
-            </p>
-            <p>
-                За годы войны завод 5 раз получал переходящее Красное знамя Ярославского обкома ВКП (б), 7 раз
-                переходящее Красное Знамя Центрального Комитета ВКП(б) и 22 раза занимал первое, второе и третье
-                места
-                во Всесоюзном социалистическом соревновании.
-            </p>
-            <p>
-                Завод дорожных машин одним из первых перешел на выпуск оборонной продукции. Заводу был присвоен
-                №765, и
-                он стал входить в состав 2-го главного Управления народного комиссариата Минометного вооружения
-                СССР.
-                Это предприятие стало изготавливать несколько типов снарядов, мин и фугасные 500 кг авиационные
-                бомбы.
-                Их изготовили 1 млн. 122 тыс. К 1944 году уровень производства здесь увеличился более чем в 2 раза
-                по
-                сравнению с 1940 годом.
-            </p>
-            <p>
-                За годы войны завод 5 раз получал переходящее Красное знамя Ярославского обкома ВКП (б), 7 раз
-                переходящее Красное Знамя Центрального Комитета ВКП(б) и 22 раза занимал первое, второе и третье
-                места
-                во Всесоюзном социалистическом соревновании.
-            </p>
-        </div>
-        <span class="about__left_show__more">Развернуть текст</span>
+<section class="about show white-bg">
+    <div class="about__line left">
+        <picture>
+            <img src="img/bg/line-bg-left-black.png" alt="img" loading="lazy" width="494" height="636">
+        </picture>
     </div>
-    <div class="about__right">
-        <div class="about__right_top">
-            <div class="about__right_btn">
-                <div class="about__right_btn_top">
-                    <button data-modal-target="#modal__autorisation"><span>Поддержать</span></button>
-                </div>
-                <div class="about__right_btn_center">
-                    <picture>
-                        <source type="image/webp" srcset="img/awesome/btn_img.webp">
-                        <source type="image/png" srcset="img/awesome/btn_img.png">
-                        <img src="img/awesome/btn_img.png" alt="img" loading="lazy">
-                    </picture>
-                </div>
-                <div class="about__right_btn_bottom">
-                    <picture>
-                        <source type="image/webp" srcset="img/awesome/Star.webp">
-                        <source type="image/png" srcset="img/awesome/Star.png">
-                        <img src="img/awesome/Star.png" alt="img" width="65" height="57" loading="lazy">
-                    </picture>
-                    <span class="town__name">Рыбинск</span>
-                </div>
-            </div>
-            <picture class="about__right_btn__pseudo_left">
-                <source type="image/webp" srcset="img/awesome/btn_img_left.webp">
-                <source type="image/png" srcset="img/awesome/btn_img_left.png">
-                <img src="img/awesome/btn_img_left.png" alt="img" width="205" height="175" loading="lazy">
-            </picture>
-            <picture class="about__right_btn__pseudo_right">
-                <source type="image/webp" srcset="img/awesome/btn_img_right.webp">
-                <source type="image/png" srcset="img/awesome/btn_img_right.png">
-                <img src="img/awesome/btn_img_right.png" alt="img" width="358" height="297" loading="lazy">
-            </picture>
-        </div>
-        <div class="about__right_supported">
-            <p class="about__right_title">Уже поддержало</p>
-            <span id="supported__counter">1 125 364</span>
-        </div>
-        <div class="about__right_awards">
-            <p class="about__right_title">Награды</p>
-            <ul class="about__right_awards_items">
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
-        </div>
+    <div class="about__line right">
+        <picture>
+            <img src="img/bg/line-bg-right-black.png" alt="img" loading="lazy" width="503" height="531">
+        </picture>
+    </div>
+    <div class="about__mouse"><span></span></div>
+    <div class="about__center">
+        <h2>ПОКАЖИ РЕЗУЛЬТАТ ЛЮБОЙ ЦЕНОЙ!</h2>
+    </div>
+    <nav class="about__menu">
+        <ul>
+            <li><a href="">К сути</a></li>
+            <li><a href="">Контакт</a></li>
+            <li><a href="">Оставить заявку</a></li>
+        </ul>
+    </nav>
+    <div class="about__pdeudo-bg">
+        <span>IDEA</span>
+    </div>
+</section>
+
+<section class="about do-not black-bg">
+    <div class="about__line left">
+        <picture>
+            <img src="img/bg/line-bg-left.png" alt="img" loading="lazy" width="494" height="636">
+        </picture>
+    </div>
+    <div class="about__line right">
+        <picture>
+            <img src="img/bg/line-bg-right.png" alt="img" loading="lazy" width="503" height="531">
+        </picture>
+    </div>
+    <div class="about__center">
+        <h2>НЕ УСЛОЖНЯЙ</h2>
+    </div>
+    <nav class="about__menu">
+        <ul>
+            <li><a href="">К сути</a></li>
+            <li><a href="">Контакт</a></li>
+            <li><a href="">Оставить заявку</a></li>
+        </ul>
+    </nav>
+    <div class="about__pdeudo-bg">
+        <span>IDEA</span>
+    </div>
+</section>
+
+<section class="about recognize white-bg">
+    <div class="about__line left">
+        <picture>
+            <img src="img/bg/line-bg-left-black.png" alt="img" loading="lazy" width="494" height="636">
+        </picture>
+    </div>
+    <div class="about__line right">
+        <picture>
+            <img src="img/bg/line-bg-right-black.png" alt="img" loading="lazy" width="503" height="531">
+        </picture>
+    </div>
+    <div class="about__center">
+        <h2>пОЗНАВАЙ!</h2>
+    </div>
+    <nav class="about__menu">
+        <ul>
+            <li><a href="">К сути</a></li>
+            <li><a href="">Контакт</a></li>
+            <li><a href="">Оставить заявку</a></li>
+        </ul>
+    </nav>
+    <div class="about__pdeudo-bg">
+        <span>IDEA</span>
+    </div>
+</section>
+
+<section class="about love black-bg">
+    <div class="about__line left">
+        <picture>
+            <img src="img/bg/line-bg-left.png" alt="img" loading="lazy" width="494" height="636">
+        </picture>
+    </div>
+    <div class="about__line right">
+        <picture>
+            <img src="img/bg/line-bg-right.png" alt="img" loading="lazy" width="503" height="531">
+        </picture>
+    </div>
+    <div class="about__center">
+        <h2>ЛЮБИ!</h2>
+    </div>
+    <nav class="about__menu">
+        <ul>
+            <li><a href="">К сути</a></li>
+            <li><a href="">Контакт</a></li>
+            <li><a href="">Оставить заявку</a></li>
+        </ul>
+    </nav>
+    <div class="about__pdeudo-bg">
+        <span>IDEA</span>
+    </div>
+</section>
+
+<section class="about reach white-bg">
+    <div class="about__line left">
+        <picture>
+            <img src="img/bg/line-bg-left-black.png" alt="img" loading="lazy" width="494" height="636">
+        </picture>
+    </div>
+    <div class="about__line right">
+        <picture>
+            <img src="img/bg/line-bg-right-black.png" alt="img" loading="lazy" width="503" height="531">
+        </picture>
+    </div>
+    <div class="about__center">
+        <h2>ДОСТИГАЙ!</h2>
+    </div>
+    <nav class="about__menu">
+        <ul>
+            <li><a href="">К сути</a></li>
+            <li><a href="">Контакт</a></li>
+            <li><a href="">Оставить заявку</a></li>
+        </ul>
+    </nav>
+    <div class="about__pdeudo-bg">
+        <span>IDEA</span>
     </div>
 </section>
